<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.PlanetDetailActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stars">

        <ImageView
            android:id="@+id/imageViewPlanet"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/earth"
            android:background="@color/gray"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/TVTitlePlanet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPlanet"
            app:layout_constraintHorizontal_bias="0"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:fontFamily="@font/poppins_medium"/>


        <LinearLayout
            android:id="@+id/LLType"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVTitlePlanet"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDesc"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLType"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trialDesc"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLMass"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLDesc"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetMass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDiameter"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLMass"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diameter"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetDiameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLGravity"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLDiameter"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravity"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetGravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLRotation"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLGravity"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotation"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetRotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLTraslation"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLRotation"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traslation"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetTraslation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDistance"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLTraslation"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLMoons"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLDistance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moons"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/outfit_variablefont_wght"
                />

            <TextView
                android:id="@+id/TVPlanetMoons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>








</ScrollView>